[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LinkedInt"
version = "0.2.1"
description = "Scrapes LinkedIn without using LinkedIn API"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Dan Lawson", email = "dlawson@depthsecurity.com"},
]
keywords = ["linkedin", "scraper", "osint", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests",
    "beautifulsoup4",
]

[tool.setuptools]
py-modules = ["LinkedInt_src"]

[project.scripts]
LinkedInt = "LinkedInt_src:main"
"LinkedInt.py" = "LinkedInt_src:main"

